# ai-usage-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: claude.rs  config.rs  cursor.rs  mod.rs  sessions.rs
src/components/: CollapsedBar.css  CollapsedBar.jsx  ExpandedPanel.css  ExpandedPanel.jsx  ProgressBar.css  ProgressBar.jsx  SessionCard.css  SessionCard.jsx  SessionsSection.css  SessionsSection.jsx  SubscriptionSection.css  SubscriptionSection.jsx
src/hooks/: useConfig.js  useUsageData.js
